fixed strikethough on ios, removed space on food card for mobile

--- a/style.css
+++ b/style.css
@@ -118,6 +118,10 @@ li{
   color:#FF0000;  /* red */
 }
 
+.strike{
+  text-decoration: line-through;
+ }
+
 @media only screen and (max-width: 700px) {
 
   #slides {
@@ -125,6 +129,10 @@ li{
   }
 
   .main-text {
-    position: static;
+    position: static; 
+  }
+
+  .mainCard{
+    min-height: 5px;
   }
 }
